--- a/charts/cronjob/templates/cronjob.yaml
+++ b/charts/cronjob/templates/cronjob.yaml
@@ -3,7 +3,7 @@
 # Author/Maintainer: Farley <farley@neonsurge.com>
 # TODO: This needs to be tested and re-aligned to deployment/statefulset standards
 ################################################
-apiVersion: batch/v1beta1
+apiVersion: {{ template "cronjob.apiVersion" . }}
 kind: CronJob
 metadata:
   name: {{ template "name" . }}
